# xion-project

./: README.md
xion_blockchain/: Cargo.toml
xion_blockchain/src/: errors.rs  lib.rs  post_minter.rs  profile_nft_minter.rs  role_manager.rs  testing.rs  tribe_controller.rs
xion_blockchain/tests/: .env  .env.example  package-lock.json  package.json  post_minter_test.ts  profile_nft_minter_test.ts  role_manager_test.ts  test_coverage_summary.md  tribe_controller_test.ts  tsconfig.json  types.ts
