[package]
name = "xion_blockchain"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for the XION blockchain platform"
license = "MIT"

[lib]
name = "xion_blockchain"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# [[bin]]
# name = "simple_contract"
# path = "src/bin/simple_contract.rs"

[features]
backtraces = ["cosmwasm-std/backtraces"]
# Use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
# Core dependencies
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.1.0"
schemars = "0.8.15"
cw721 = { version = "0.16.0", optional = true }
cw1155 = { version = "0.16.0", optional = true }
cw2 = "1.1.0"

# Serialization
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.48"
sha2 = "0.10.7"
hex = "0.4.3"

# Utility
base64 = "0.21"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cosmwasm-schema = "1.5.0"
serde_json = "1.0.108"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
